Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102829

[Wayland] Multitouch is not working in Qt6

    XMLWordPrintable

Details

    • Linux/Wayland
    • 256c89e63f (qt/qtwayland/dev) 14bb5b8a86 (qt/qtwayland/6.3) 14bb5b8a86 (qt/tqtc-qtwayland/6.3) 256c89e63f (qt/tqtc-qtwayland/dev) 0bf7f657cc (qt/tqtc-qtwayland/6.2) 14bb5b8a86 (qt/qtwayland/6.3.1) 14bb5b8a86 (qt/tqtc-qtwayland/6.3.1)

    Description

      In Qt6 it's not possible to activate two separate Buttons simultaneously using multitouch.

      To reproduce the issue run the attached example with pure-qml Wayland compositor example. Using touch screen it should be able to press down the first button and use another finger to press and release the other button. The second button receives the press event, but is still not activated and when releasing touch the release event does not come to the Button. 

      Using Qt 5.15.9 the same example works as expected. 

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes