Compositor: Re-enable touch events for Wayland clients

As documented, setAcceptTouchEvents() would be implicit in calling
setAcceptedMouseButtons() in Qt 5, but in Qt 6, this was changed.
The result was that QWaylandQuickItems would never receive any
touch events in Qt 6, even though the touchEventsEnabled flag is
set by default.

To fix this, we add an explicit call to setAcceptTouchEvents() to
ensure the same behavior as we had in Qt 5.

[ChangeLog][QtWaylandCompositor] Fixed a bug where multi-touch would
not work with Qt Wayland Compositor.

Fixes: QTBUG-102829
Change-Id: Idc99c56a7cc8651da844be3ea238b8537891dd1f
Reviewed-by: Liang Qi <liang.qi@qt.io>
(cherry picked from commit 256c89e63f26c255e88f375da7d70dd0483814e8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>